--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
+    "cors": "^2.7.1",
     "dhcpd-leases": "0.0.1",
     "express": "^4.13.3"
   }
