Add script/server script
Changes:
* Run the server with forever
* Add start and stop npm scripts, which invoke the corresponding forever
  commands
* Add the script/server script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "body-parser": "^1.14.2",
     "cors": "^2.7.1",
     "dhcpd-leases": "0.0.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "forever": "^0.15.1"
+  },
+  "scripts": {
+    "start": "forever start --uid \"micro-device-lab\" --append index.js",
+    "stop": "forever stop \"micro-device-lab\""
   }
 }
