--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "scripts": {
     "server:start": "forever start --uid \"micro-device-lab\" --append index.js",
+    "server:start:dev": "CLIENT_LEASES_FILE=dev/dhcpd.leases PORT=8081 NO_EXEC=1 forever start --uid \"micro-device-lab-dev\" --append --watch index.js",
     "server:stop": "forever stop \"micro-device-lab\"",
-    "client:build:watch": "webpack-dev-server",
-    "client:build": "NODE_ENV=production webpack"
+    "client:build:dev": "webpack-dev-server",
+    "client:build": "NODE_ENV=prod webpack",
+    "dev": "npm run server:start:dev && npm run client:build:dev"
   },
   "version": "0.2.0",
   "name": "micro-device-lab"
