chore: Make dev and prod servers use same UID
There's no script to stop the dev server but there is one to stop the
prod server.

Since it's highly unlikely that the dev and prod servers will be run at
the same time, make them use the same UID so that they can both be
stopped by the same script.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "server:start": "NODE_ENV=prod forever start --uid \"micro-device-lab\" --append index.js",
-    "server:start:dev": "PORT=8081 forever start --uid \"micro-device-lab-dev\" --append --watch index.js",
+    "server:start:dev": "PORT=8081 forever start --uid \"micro-device-lab\" --append --watch index.js",
     "server:stop": "forever stop \"micro-device-lab\"",
     "client:build:dev": "webpack-dev-server",
     "client:build": "NODE_ENV=prod webpack",
