--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "server:start": "NODE_ENV=prod forever start --uid \"micro-device-lab\" --append index.js",
-    "server:start:dev": "PORT=8081 forever start --uid \"micro-device-lab\" --append --watch index.js",
-    "server:stop": "forever stop \"micro-device-lab\"",
+    "server:start": "NODE_ENV=prod forever start --uid \"pinc\" --append index.js",
+    "server:start:dev": "PORT=8081 forever start --uid \"pinc\" --append --watch index.js",
+    "server:stop": "forever stop \"pinc\"",
     "client:build:dev": "webpack-dev-server",
     "client:build": "NODE_ENV=prod webpack",
     "dev": "npm run server:start:dev && npm run client:build:dev"
   },
   "version": "0.4.0",
-  "name": "micro-device-lab"
+  "name": "pinc"
 }
