--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "redux": "^3.0.6",
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
-    "style-loader": "^0.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.13.0"
   },
   "scripts": {
     "server:start": "NODE_ENV=prod forever start --uid \"pinc\" --append index.js",
     "server:start:dev": "PORT=8081 forever start --uid \"pinc\" --append --watch index.js",
     "server:stop": "forever stop \"pinc\"",
-    "client:build:dev": "webpack-dev-server",
+    "client:build:dev": "hjs-dev-server",
     "client:build": "NODE_ENV=prod webpack",
     "dev": "npm run server:start:dev && npm run client:build:dev"
   },
